--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
