--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.10",
     "prettier": "2.7.1",
     "typescript-plugin-css-modules": "^3.4.0"
   }
